# builds-perf-homework

./: CMakeLists.txt  Makefile  README.md
bench/: run.cpp
include/: homework.hpp
scripts/: geojson2csv.js
test/: compare.cpp  query.cpp
